syntax = "proto3";
package testnet.aggregation;

option go_package = "testnet/x/aggregation/types";

// Msg defines the Msg service.
service Msg {
  rpc AggregatePrice (MsgAggregatePrice) returns (MsgAggregatePriceResponse);
}

message PriceInput {
  string source  = 1;
  uint64 timestamp = 2;
  uint64 price = 3;
}

message MsgAggregatePrice {
  string creator = 1;
  repeated PriceInput prices = 2;
}

message MsgAggregatePriceResponse {
  uint64 id = 1;
}


